# tidal-rs

./: .gitignore  Cargo.toml
.github/: copilot-instructions.md
examples/: dump_auth.rs  get_current_user_info.rs  get_pages.rs  get_playback_info.rs  get_track_info.rs  parse_pages.rs  test_auth.rs
examples/tidal_spider/: error.rs  main.rs  spider.rs
examples/tidal_spider/spider/: media.rs  modules.rs  page.rs
src/: api.rs  auth.rs  catalog.rs  catalogue.rs  client.rs  endpoints.rs  error.rs  lib.rs  users.rs  utils.rs
src/api/: auth.rs  enums.rs  media.rs  mod.rs  my_collection.rs  pages.rs  paging.rs  playback.rs  responses.rs  user.rs
src/api/media/: album.rs  article.rs  artist.rs  image.rs  lyrics.rs  mix.rs  playlist.rs  track.rs  video.rs
src/api/pages/: modules.rs
src/api/pages/modules/: collection_modules.rs  header_modules.rs
src/auth/: credentials.rs  flows.rs  oauth.rs
src/client/: auth.rs  catalogue.rs  credentials.rs  mod.rs
src/client/auth/: credentials.rs
src/interface/: auth.rs  catalogue.rs  mod.rs  users.rs
src/interface/auth/: flows.rs
src/interface/catalogue/: album_catalogue.rs  artist_catalogue.rs  playlist.rs  playlist_catalogue.rs  track.rs  track_catalogue.rs  video.rs  video_catalogue.rs
src/tests/: auth.rs  client.rs  mod.rs
tidal-rs-macros/: Cargo.toml
tidal-rs-macros/src/: lib.rs
tidal-rs-macros/src/attributes/: fields.rs  mod.rs  requests.rs
tidal-rs_playground/: Cargo.toml
tidal-rs_playground/src/: app.rs  event.rs  lib.rs  main.rs
tidal-rs_playground/src/app/: custom_ui.rs
