[package]
name = "tidal-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12", features = ["blocking", "json"]}
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_flat_path = "0.2"
serde_with = {version = "3.9", features = ["base64"]}
isocountry = "0.3"
url = "2.5"
chrono = {version = "0.4", features = ["serde"]}
uuid = {version = "1.10", features = ["v4", "serde"]}
dash-mpd = "0.17"


[dev-dependencies]
dotenvy_macro = "0.15"
serde_path_to_error = "0.1"


[features]
default = ["show_unmodeled"]
show_unmodeled = []